fix(link): multiline hit area gap, underline (#DS-3562, #DS-4778) (#1418)

--- a/packages/components/link/_link-theme.scss
+++ b/packages/components/link/_link-theme.scss
@@ -16,9 +16,17 @@
 
     &.kbq-text-only,
     & .kbq-link__text {
-        border-bottom-style: solid;
-        border-bottom-width: 1px;
-        border-bottom-color: transparent;
+        text-decoration-line: underline;
+        text-decoration-style: solid;
+        text-decoration-thickness: var(--kbq-link-underline-width);
+        text-decoration-color: transparent;
+        text-underline-offset: calc(var(--kbq-link-size-multiline-hit-area-gap) + var(--kbq-link-underline-width));
+    }
+
+    &.kbq-link_multiline {
+        padding-top: var(--kbq-link-size-multiline-hit-area-gap);
+        padding-bottom: var(--kbq-link-size-multiline-hit-area-gap);
+        box-decoration-break: clone;
     }
 
     &.kbq-text-with-icon .kbq-icon {
@@ -104,7 +112,7 @@
     &:not(.kbq-link_pseudo, .kbq-link_no-underline) {
         &.kbq-text-only:not(.kbq-text-with-dot),
         & .kbq-link__text {
-            border-bottom-color: var(--kbq-#{$base-path}-border-bottom);
+            text-decoration-color: var(--kbq-#{$base-path}-border-bottom);
         }
     }
 
@@ -130,7 +138,7 @@
             &.kbq-link_pseudo {
                 &.kbq-text-only:not(.kbq-text-with-dot),
                 & .kbq-link__text {
-                    border-bottom-color: var(--kbq-link-state-hover-border-bottom);
+                    text-decoration-color: var(--kbq-link-state-hover-border-bottom);
                 }
             }
         }
@@ -142,7 +150,7 @@
             &.kbq-link_pseudo {
                 &.kbq-text-only:not(.kbq-text-with-dot),
                 & .kbq-link__text {
-                    border-bottom-color: var(--kbq-link-state-active-border-bottom);
+                    text-decoration-color: var(--kbq-link-state-active-border-bottom);
                 }
             }
         }
@@ -178,7 +186,7 @@
                 &.kbq-text-only,
                 &.kbq-text-with-icon .kbq-link__text,
                 &.kbq-text-with-dot .kbq-link__text {
-                    border-bottom: none;
+                    text-decoration: none;
                 }
 
                 &::after {
